Add theor includes

--- a/HW1/HW1_Image_preprocessing-1.ipynb
+++ b/HW1/HW1_Image_preprocessing-1.ipynb
@@ -131,6 +131,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f7e44c9",
+   "metadata": {},
+   "source": [
+    "### Result\n",
+    "\n",
+    "In terms of image intensity, the mean value of 33.595 suggests that the overall brightness of the grayscale image is relatively low. On average, the pixel intensities tend to be closer to the lower end of the intensity range.\n",
+    "\n",
+    "The standard deviation of 39.793 indicates how much the pixel intensities vary from the mean. A higher standard deviation suggests a wider distribution of intensities and a greater range of brightness values in the image. In this case, the relatively high standard deviation implies that there is a significant variation in pixel intensities, ranging from darker to brighter regions.\n",
+    "\n",
+    "The entropy value of 5.691 represents the amount of information or randomness in the image. Higher entropy indicates a more complex distribution of intensities and a greater diversity of pore sizes and shapes in the image. In this context, it suggests that the image contains a diverse distribution of pores, possibly with different sizes, orientations, or textures.\n",
+    "\n",
+    "The statistics (mean, standard deviation, and entropy) are related to the histogram characteristics in the following ways:\n",
+    "\n",
+    "1. Mean: The mean value corresponds to the central tendency of the pixel intensities and can be visualized as the peak or center of the histogram. If the mean is towards the lower end of the intensity range, as in this case, the histogram is likely to have a peak towards the darker range.\n",
+    "\n",
+    "2. Standard Deviation: The standard deviation provides information about the spread or dispersion of the pixel intensities. A larger standard deviation results in a wider histogram distribution, indicating a greater range of intensity values.\n",
+    "\n",
+    "3. Entropy: Entropy measures the uncertainty or randomness of the pixel intensities. In terms of the histogram, higher entropy implies that the histogram is more evenly distributed across different intensity values, indicating a greater diversity of pore sizes or variations in the image.\n",
+    "\n",
+    "Overall, the statistics provide insights into the overall intensity level, variation, and diversity of pores in the grayscale image, while the histogram complements this information by visually representing the frequency of intensities and their distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "629c14fb-c8d6-47e4-ae73-a05c60052e59",
    "metadata": {},
    "source": [
