Theor stuff updated

--- a/HW1/HW1_Image_preprocessing-1.ipynb
+++ b/HW1/HW1_Image_preprocessing-1.ipynb
@@ -131,6 +131,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68998d9d",
+   "metadata": {},
+   "source": [
+    "### Result interpretation in terms of image intensity and pores distribution\n",
+    "\n",
+    "1. There is two explicit histogram peakes -- this can be interpreted as approximately three domination types of materials.\n",
+    "* First of all, the one that is closer to zero can be interpreted as pores (probably in this photo this is not a backgroung, this is oxxxy jacket, because it is really black).\n",
+    "* Then there is a second material (in current image this is a background) -- can be interpreted in digital core physics terms as domination mineral (like a quartz in sandstones or something else).\n",
+    "* The last type of material -- \"other\" material - wide specter of small including of mineral (this is human skin in a photo)\n",
+    "\n",
+    "2. We can say that the gray intensity spectrum is very wide judging by this histogram. There are pixels with an intensity from 0 to 255. But most of the pixels are located on the left side of the histogram, which indicates an explicit porosity of the sample and a large content of non-contrasting dominant mineral."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1f7e44c9",
    "metadata": {},
    "source": [
@@ -335,6 +350,30 @@
     "filters = [box_filter, gaussian_filter, median_filter, nlm_filter]\n",
     "for filter in filters:\n",
     "    filter(noisy_images[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e7b1ac",
+   "metadata": {},
+   "source": [
+    "### What's filter the best choice for core microCT image processing? (my observation)\n",
+    "\n",
+    "*small theory including*\n",
+    "\n",
+    "Linear methods, such as the box filter and Gaussian filter, work by convolving the image with a kernel that averages the pixel values in the neighborhood of each pixel. The box filter is a simple averaging filter that replaces each pixel with the average of its neighboring pixels. The Gaussian filter is a more sophisticated filter that uses a weighted average to give more weight to nearby pixels and less weight to distant pixels. Both of these filters are effective at reducing Gaussian noise, which is a type of noise that is characterized by a normal distribution.\n",
+    "\n",
+    "Non-linear methods, such as the median filter and non-local means filter, work by replacing each pixel with a value that is derived from the values of its neighboring pixels. The median filter replaces each pixel with the median value of its neighboring pixels, which is effective at reducing salt-and-pepper noise, which is a type of noise that is characterized by isolated pixels with very high or very low values. The non-local means filter is a more sophisticated filter that replaces each pixel with a weighted average of the pixels in the image that are most similar to it. This filter is effective at reducing both Gaussian noise and salt-and-pepper noise.\n",
+    "\n",
+    "*my observation*\n",
+    "\n",
+    "I think that more complex, sophisticated technics can be better choicew for digital core image processing. I see three reasons:\n",
+    "\n",
+    "* when mCT images shooting, we get more than just simple Gauussian noise in the image. We have a lot of other artifacts due to the physics of the process of shooting microCT images like beam hardering and others. That means that more complex algorithms, which can deal with more complex noise than Gaussian, are winners;\n",
+    "\n",
+    "* if we calculated SNR we can see that NLM is better (probably); \n",
+    "\n",
+    "* from the lecture we know that NLM is the good choice for core sample images."
    ]
   },
   {
